<resources>
    <string name="app_name">IVA</string>
    <string name="signal_1_text">signal 1</string>
    <string name="signal_2_text">signal 2</string>
    <string name="permissions_not_granted">Must grant all permissions to use app</string>
    <string name="bss_switch_text">BSS ON/OFF</string>
    <string name="play_pause_signal_1">play/pause signal 1 button</string>
    <string name="play_pause_signal_2">play_pause_signal_2_button</string>
    <string name="preferences">preferences</string>
    <string name="def">Default</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="frame_size">Frame size</string>
    <string name="hop_size">Hop size</string>
    <string name="learning_rate">Learning rate</string>
    <string name="normalization_factor">Normalization factor</string>
    <string name="pca_smoothing_factor">PCA smoothing factor</string>
    <string name="frame_size_validation">Must be integer in [64, 16,000]</string>
    <string name="hop_size_validation">Must be integer in [1/4, 1/2] of frame size</string>
    <string name="learning_rate_validation">Must be real in (0, 1]</string>
    <string name="normalization_factor_validation">Must be real in [0, 1]</string>
    <string name="pca_smoothing_factor_validation">Must be real in [0, 1]</string>
</resources>