<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="213dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/processor_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bss_switch_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signalOneTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/signal_1_text" />

                <ImageButton
                    android:id="@+id/signal_one_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/play"
                    android:contentDescription="@string/play_pause_signal_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signalTwoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/signal_2_text" />

                <ImageButton
                    android:id="@+id/signal_two_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/play"
                    android:contentDescription="@string/play_pause_signal_2" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>